--- a/barchart.html
+++ b/barchart.html
@@ -32,7 +32,7 @@
                             class="sidebar-item active">
                             <a href="index.html" class='sidebar-link'>
                                 <i class="bi bi-grid-fill"></i>
-                                <span>Dashboard</span>
+                                <span>Geospartial map</span>
                             </a>
                         </li>
                         
