added pie chart

--- a/piechart.html
+++ b/piechart.html
@@ -151,7 +151,7 @@
                .attr("d", path)
                .attr("fill", function(d) { return color(d.data.candidate); });
         
-            console.log(arc)
+            //console.log(arc)
         
             arc.append("text")
                .attr("transform", function(d) { 
