--- a/barchart.html
+++ b/barchart.html
@@ -109,7 +109,7 @@
            .attr("x", 50)
            .attr("y", 50)
            .attr("font-size", "24px")
-           .text("General performance")
+           .text("Candidates performance - Kampala")
 
         var xScale = d3.scaleBand().range([0, width]).padding(0.4),
             yScale = d3.scaleLinear().range([height, 0]);
@@ -121,6 +121,8 @@
             if (error) {
                 throw error;
             }
+
+            data = data.filter(function(d){ return d.district == "KAMPALA" })
 
             xScale.domain(data.map(function(d) { return d.candidate; }));
             yScale.domain([0, d3.max(data, function(d) { return d.candidate_votes_percent; })]);
